angular content update

--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title id="title">Gmserve - Born to build</title>
-  <base href="/">
+  <title id="title">Goutam singh | Front-end | UI developer</title>
+  <base href="/angular/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="assets/favicon1.ico">
